# edm_csi

./: .gitmodules  README.md  fastMRI_dataloader.py  main.py  pyproject.toml  recon_config.example.json  recon_config.json  recon_edm.py  sample.py  sample_config.json  train.py  train_config.json  utils.py
common/: __init__.py  config_utils.py
config_examples/: sample_config.example.json  train_config.example.json
configs/: base_config.json
configs/inference/: recon_config.json
configs/training/: train_config.json
datasets/: __init__.py  fastmri.py
inference/: __init__.py  main.py  recon_edm.py  runners.py
masks/: __init__.py  loupe.py  mask_utils.py
models/: __init__.py
training/: __init__.py  train.py
