[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stroke-mri-diffusion"
version = "0.1.0"
description = "Diffusion-based MRI reconstruction for stroke imaging"
authors = [
    {name = "Research Team", email = "research@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "tqdm",
    "pickle5; python_version < '3.8'",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]
training = [
    "wandb",
    "tensorboard",
]

[project.scripts]
stroke-mri-inference = "inference.main:main"
stroke-mri-train = "training.train:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "datasets*", "inference*", "masks*", "models*", "training*"]
exclude = ["tests*", "docs*", "edm*"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100